# macro-pipeline

./: .gitignore  Cargo.toml  Dockerfile  README.md  pyproject.toml
data/raw/: dataset_usa_0000_public_debt.txt  dataset_usa_0022_m1.txt  dataset_usa_0025_p_r.txt
etl_flat_dataset/: main.py
etl_flat_dataset/core/: pipeline.py
macro_pipeline/: main.py
macro_pipeline/core/: paths.py
src/: main.rs
src/core/: mod.rs  paths.rs  pipeline.rs
